# tts1

./: README.md  gradio_app.py  main.py  pyproject.toml  requirements.txt
examples/: infer_long_text.py  sample_long_text.txt
sample/: id_0002.txt  id_0003.txt  id_0007.txt
utils/: normalize_text.py  phoneme_dict.json  phonemize_text.py
vieneu_tts/: __init__.py  vieneu_tts.py
